--- a/module-4/views/instructors/create.njk
+++ b/module-4/views/instructors/create.njk
@@ -19,8 +19,7 @@
             <div class="item">
                 <div>Instrutor</div>
                 <div>
-                    <input type="text" name="name" placeholder="Seu Nome.">
-
+                    <input type="text" name="name" placeholder="Seu nome">
                 </div>
             </div>
 
@@ -34,8 +33,14 @@
             <div class="item">
                 <div>Sexo</div>
                 <div>
-                    <span><input type="radio" name="gender" value="M" checked="checked">MASCULINO</span>
-                    <span><input type="radio" name="gender" value="F">FEMININO</span>
+                    <span><input type="radio" name="gender" value="M" checked>
+                        MASCULINO
+                    </span>
+
+                    <span><input type="radio" name="gender" value="F">
+                        FEMININO
+                    </span>
+
                 </div>
             </div>
 
