--- a/module-4/views/layout.njk
+++ b/module-4/views/layout.njk
@@ -13,13 +13,13 @@
     <body>
         <header>
             <div class="links">
-                <a class="active" href="/instructors">Instructors</a>
+                <a href="/instructors">Instructors</a>
                 <a href="/members">Members</a>
             </div>
         </header>
 
         {% block content %}{% endblock %}
-
+        <script src="/scripts.js"></script>
     </body>
 
 </html>
