--- a/module-4/views/instructors/show.njk
+++ b/module-4/views/instructors/show.njk
@@ -10,7 +10,8 @@
 
     <div class="card">
 
-        <section class="avatar" style="background: url(https://source.unsplash.com/collection/8353395/900x900) no-repeat center center / cover"></section>
+        <section class="avatar" style="background: url({{instructor.avatar_url}}) no-repeat center center / cover">
+        </section>
 
         <section class="details">
             <h3>Detalhes</h3>
