--- a/module-4/views/members/edit.njk
+++ b/module-4/views/members/edit.njk
@@ -3,26 +3,26 @@
 {% block content %}
 <div class="card">
         <section class="avatar" 
-        style="background: url({{instructor.avatar_url}}) no-repeat center center / cover">
+        style="background: url({{ member.avatar_url }}) no-repeat center center / cover">
         </section>
 
         <section class="details">
-            <h3>Editar Instrutor</h3>
+            <h3>Editar Membro</h3>
 
-            <form method="POST" action="/instructors?_method=PUT">
+            <form method="POST" action="/members?_method=PUT">
 
-            {% include 'instructors/fields.njk' %}
+            {% include 'members/fields.njk' %}
 
             <input type="hidden" 
             name="id" 
-            value="{{ instructor.id }}">
+            value="{{ member.id }}">
             </form>
        
-            <form id="form_delete" action="/instructors?_method=DELETE" method="POST">
+            <form id="form_delete" action="/members?_method=DELETE" method="post">
                 <button type="submit">Deletar</button>
                 <input type="hidden"
                  name="id" 
-                 value="{{ instructor.id }}">
+                 value="{{ member.id }}">
             </form>
 
         </section>
