--- a/Foodfy/views/users/home.njk
+++ b/Foodfy/views/users/home.njk
@@ -16,7 +16,7 @@
 
         <div class="recipes">
             {% for recipe in recipes %}
-                <div id="{{recipe.id}}" class="card">
+                <div class="card">
                     <img src="{{recipe.image}}" alt="{{recipe.title}}">
                     <h5>{{recipe.title}}</h5>
                     <p>por {{recipe.author}}</p>
