--- a/Foodfy/views/admin/create.njk
+++ b/Foodfy/views/admin/create.njk
@@ -1,5 +1,9 @@
 {% extends 'model.njk' %}
 
+{% block head %}
+    <title>Criando receita</title>
+{% endblock head %}
+
 {% block content %}
 <div class="recipe">
     <form action="/admin/recipes" method="POST">
@@ -9,31 +13,6 @@
         </div>
 
         {% include './recipeModel.njk' %}
-
-        <div class="item">
-            <div>Ingredientes</div>
-            <div id="ingredients">
-                <div class="ingredient">
-                    <input type="text" name="ingredients[]" value="{{ingredients}}" placeholder="Ingredient"/>
-                </div>
-            </div>
-            <button type="button" class="add-ingredient">Adicionar novo ingrediente</button>
-        </div>
-
-        <div class="item">
-            <div>Modo de preparo</div>
-            <div id="preparation">
-                <div class="preparation">
-                    <input type="text" name="preparation[]" value="{{preparation}}" placeholder="Preparation"/>
-                </div>
-            </div>
-            <button type="button" class="add-preparation">Adicionar novo passo</button>
-        </div>
-
-        <div class="item">
-            <div>Informações adicionais</div>
-            <textarea name="information" placeholder="Informações adicionais" wrap="hard">{{ recipe.information }}</textarea>
-        </div>
     </form>
 </div>
 
