--- a/Foodfy/src/app/views/admin/recipes/loadRecipes.njk
+++ b/Foodfy/src/app/views/admin/recipes/loadRecipes.njk
@@ -7,7 +7,7 @@
                 </div>
                 <div class="details">
                     <h4 class="title">{{ recipe.title }}</h4>
-                    <p class="author">{{ recipe.author }}</p>
+                    <p class="author">{{ recipe.chef_name }}</p>
                     <a href="/admin/recipes/{{ recipe.id }}" class="view">Visualizar</a>
                 </div>
             </div>
