--- a/Foodfy/src/app/views/admin/recipes/recipe.njk
+++ b/Foodfy/src/app/views/admin/recipes/recipe.njk
@@ -14,7 +14,7 @@
         <div class="recipe-header">
             <img src="{{recipe.image}}" alt="{{recipe.title}}">
             <h2>{{recipe.title}}</h2>
-            <p>por {{recipe.author}}</p>
+            <p>por {{recipe.chef_name}}</p>
         </div>
 
         <div class="recipe-content">
@@ -57,7 +57,7 @@
                 <h4>ESCONDER</h4>
             </div>
                 <div class="topic-content">
-                    <p>{{recipe.information}}</p>
+                    <p style="max-width: 940px;">{{recipe.information}}</p>
                 </div> 
 
             </div> 
