--- a/Foodfy/src/app/views/users/home.njk
+++ b/Foodfy/src/app/views/users/home.njk
@@ -19,7 +19,7 @@
                 <div class="card">
                     <a href="/recipes/{{recipe.id}}"><img src="{{recipe.image}}" alt="{{recipe.title}}"></a>
                     <h5>{{recipe.title}}</h5>
-                    <p>por {{recipe.author}}</p>
+                    <p>por {{recipe.chef_name}}</p>
                 </div>
             {% endfor %}
 
