--- a/Foodfy/src/app/views/users/recipes.njk
+++ b/Foodfy/src/app/views/users/recipes.njk
@@ -5,7 +5,7 @@
 {% endblock head %}
     
 {% block content %}
-    <main>
+    <main style="min-height: 80vh;">
         {% if filter %}
             <h3>Procurando por "{{filter}}"</h3>
         {% endif %}
@@ -14,7 +14,7 @@
             <div class="card">
                 <a href="/recipes/{{recipe.id}}"><img src="{{recipe.image}}" alt="{{recipe.title}}"></a>
                 <h5>{{recipe.title}}</h5>
-                <p>por {{recipe.author}}</p>
+                <p>por {{recipe.chef_name}}</p>
             </div>
         {% endfor %}
 
