--- a/Foodfy/src/app/views/users/recipe.njk
+++ b/Foodfy/src/app/views/users/recipe.njk
@@ -10,7 +10,7 @@
         <div class="recipe-header">
             <img src="{{recipe.image}}" alt="{{recipe.title}}">
             <h2>{{recipe.title}}</h2>
-            <p>por {{recipe.author}}</p>
+            <p>por {{recipe.chef_name}}</p>
         </div>
 
         <div class="recipe-content">
