--- a/Foodfy/src/app/views/users/recipes.njk
+++ b/Foodfy/src/app/views/users/recipes.njk
@@ -17,7 +17,12 @@
                 <p>por {{recipe.chef_name}}</p>
             </div>
         {% endfor %}
-
+        </div>
+         <div class="pagination"
+            data-page = {{pagination.page}}
+            data-total = {{pagination.total}}
+            data-filter = {{filter}}
+        >
         </div>
     </main>
 
